--- a/appdev204.plist
+++ b/appdev204.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://58.246.54.246:8080/iostest/memedia206.ipa</string>
+					<string>http://58.246.54.246:8080/iostest/dev-memedia204.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
@@ -33,7 +33,7 @@
 			<key>metadata</key>
 			<dict>
 				<key>bundle-identifier</key>
-				<string>com.onlyme.memedia</string>
+				<string>com.onlyme.memedia-dev</string>
 				<key>bundle-version</key>
 				<string>1.2.0</string>
 				<key>kind</key>
