--- a/game/tantiao.plist
+++ b/game/tantiao.plist
@@ -11,7 +11,7 @@
 					<key>kind</key>
 					<string>software-package</string>
 					<key>url</key>
-					<string>http://58.246.54.246:8080/iostest/memedia206.ipa</string>
+					<string>https://raw.githubusercontent.com/kevintodo/OnlyMediaApp/master/game/jumpupGame.ipa</string>
 				</dict>
 				<dict>
 					<key>kind</key>
